--- a/.github/workflows/PublishToEnvironment.yaml
+++ b/.github/workflows/PublishToEnvironment.yaml
@@ -38,7 +38,7 @@ jobs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@ALCodeAnalysis
         with:
           shell: powershell
 
@@ -47,19 +47,19 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@ALCodeAnalysis
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
         with:
           shell: powershell
 
       - name: Determine Deployment Environments
         id: DetermineDeploymentEnvironments
-        uses: spetersenms/AL-Go/Actions/DetermineDeploymentEnvironments@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/DetermineDeploymentEnvironments@ALCodeAnalysis
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
@@ -77,7 +77,7 @@ jobs:
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@ALCodeAnalysis
         if: steps.DetermineDeploymentEnvironments.outputs.UnknownEnvironment == 1
         with:
           shell: powershell
@@ -109,7 +109,7 @@ jobs:
             Write-Host "No AuthContext provided for $envName, initiating Device Code flow"
             $ALGoHelperPath = "$([System.IO.Path]::GetTempFileName()).ps1"
             $webClient = New-Object System.Net.WebClient
-            $webClient.DownloadFile('https://raw.githubusercontent.com/spetersenms/AL-Go/FixDeployFromPRRefName/Actions/AL-Go-Helper.ps1', $ALGoHelperPath)
+            $webClient.DownloadFile('https://raw.githubusercontent.com/spetersenms/AL-Go/ALCodeAnalysis/Actions/AL-Go-Helper.ps1', $ALGoHelperPath)
             . $ALGoHelperPath
             DownloadAndImportBcContainerHelper
             $authContext = New-BcAuthContext -includeDeviceLogin -deviceLoginTimeout ([TimeSpan]::FromSeconds(0))
@@ -145,21 +145,21 @@ jobs:
           Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "envName=$envName"
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
         with:
           shell: ${{ matrix.shell }}
           get: type,powerPlatformSolutionFolder
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@ALCodeAnalysis
         with:
           shell: ${{ matrix.shell }}
           gitHubSecrets: ${{ toJson(secrets) }}
           getSecrets: '${{ steps.envName.outputs.envName }}-AuthContext,${{ steps.envName.outputs.envName }}_AuthContext,AuthContext'
 
       - name: Get Artifacts for deployment
-        uses: spetersenms/AL-Go/Actions/GetArtifactsForDeployment@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/GetArtifactsForDeployment@ALCodeAnalysis
         with:
           shell: ${{ matrix.shell }}
           artifactsVersion: ${{ github.event.inputs.appVersion }}
@@ -167,7 +167,7 @@ jobs:
 
       - name: Deploy to Business Central
         id: Deploy
-        uses: spetersenms/AL-Go/Actions/Deploy@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/Deploy@ALCodeAnalysis
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -180,7 +180,7 @@ jobs:
 
       - name: Deploy to Power Platform
         if: env.type == 'PTE' && env.powerPlatformSolutionFolder != ''
-        uses: spetersenms/AL-Go/Actions/DeployPowerPlatform@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/DeployPowerPlatform@ALCodeAnalysis
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -199,7 +199,7 @@ jobs:
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@FixDeployFromPRRefName
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@ALCodeAnalysis
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
