--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -8,5 +8,6 @@
     "onPull_Request": true,
     "mode": "modifiedApps"
   },
-  "templateSha": "caa8367ebfde88045504bbd5060c1826daf3e0d0"
+  "templateSha": "caa8367ebfde88045504bbd5060c1826daf3e0d0",
+  "rulesetFile": "rulesets/ruleset.json"
 }
