--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -9,5 +9,5 @@
     "mode": "modifiedApps"
   },
   "templateSha": "caa8367ebfde88045504bbd5060c1826daf3e0d0",
-  "rulesetFile": "rulesets/ruleset.json"
+  "rulesetFile": "../rulesets/ruleset.json"
 }
