[main@7e3b905] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - dd96c7e

--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -312,6 +312,14 @@ jobs:
           project: ${{ inputs.project }}
           testType: "pageScripting"
 
+      - name: Analyze Diagnostic Logs
+        id: analyzeDiagnosticLogs
+        if: (success() || failure())
+        uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
+        with:
+          shell: ${{ inputs.shell }}
+          project: ${{ inputs.project }}
+
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
         uses: spetersenms/AL-Go/Actions/PipelineCleanup@ALCodeAnalysis
