[main@4a31c8f] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - 6ca403f

--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -315,7 +315,7 @@ jobs:
 
       - name: Analyze Diagnostic Logs
         id: analyzeDiagnosticLogs
-        if: (success() || failure())
+        if: (success() || failure()) && github.event_name == 'pull_request'
         uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
         with:
           shell: ${{ inputs.shell }}
@@ -323,10 +323,12 @@ jobs:
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
-        if: always() && hashFiles('output.sarif.json') != ''
+        if: github.event_name == 'pull_request' && always() && hashFiles('output.sarif.json') != ''
         with:
           sarif_file: output.sarif.json
-          category: "AL Code Analysis"
+          category: "AL Code Analysis - ${{ inputs.project }}"
+          ref: ${{ github.event.pull_request.head.ref || github.ref }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
