[main@e2e8267] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - 4aced1a

--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -327,7 +327,7 @@ jobs:
         with:
           sarif_file: output.sarif.json
           category: "AL Code Analysis - ${{ inputs.project }}"
-          ref: ${{ github.event.pull_request.head.ref || github.ref }}
+          ref: ${{ format('refs/heads/{0}', github.event.pull_request.head.ref) || github.ref }}
           sha: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Cleanup
