[main@6e687f1] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - ffda5a7

--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -327,6 +327,9 @@ jobs:
         with:
           sarif_file: output.sarif.json
           category: "AL Code Analysis - ${{ inputs.project }}"
+          ref: refs/heads/${{ github.head_ref || github.ref_name }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+
 
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
