--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -328,7 +328,7 @@ jobs:
           sarif_file: output.sarif.json
           category: "AL Code Analysis - ${{ inputs.project }}"
           ref: ${{ github.event.pull_request.number && format('refs/pull/{0}/merge', github.event.pull_request.number) || format('refs/heads/{0}', github.ref_name) }}
-          sha: ${{ github.sha }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
