[main@e21de68] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - f7812a6

--- a/.github/workflows/PullRequestHandler.yaml
+++ b/.github/workflows/PullRequestHandler.yaml
@@ -108,8 +108,38 @@ jobs:
       needsContext:  ${{ toJson(needs) }}
       useArtifactCache: true
 
-  StatusCheck:
+  CodeAnalysisUpload:
     needs: [ Initialization, Build ]
+    if: (!cancelled())
+    runs-on: [ windows-latest ]
+    name: Pull Request Status Check
+    steps:
+      - name: Download artifacts - ErrorLogs
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
+        with:
+          pattern: '*-ErrorLogs-*'
+          path: '${{ github.workspace }}/ErrorLogs/'
+          merge_multiple: true
+
+      - name: Analyze Diagnostic Logs
+        id: analyzeDiagnosticLogs
+        if: (success() || failure())
+        uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
+        with:
+          shell: ${{ inputs.shell }}
+          project: ${{ inputs.project }}
+
+      - name: Upload SARIF file to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && hashFiles('output.sarif.json') != ''
+        with:
+          sarif_file: output.sarif.json
+          category: "AL Code Analysis"
+          ref: ${{ github.event.pull_request.number && format('refs/heads/{0}', github.event.pull_request.head.ref) || format('refs/heads/{0}', github.ref_name) }}
+          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+
+  StatusCheck:
+    needs: [ Initialization, Build, CodeAnalysisUpload ]
     if: (!cancelled())
     runs-on: [ windows-latest ]
     name: Pull Request Status Check
