--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -313,22 +313,22 @@ jobs:
           project: ${{ inputs.project }}
           testType: "pageScripting"
 
-      - name: Analyze Diagnostic Logs
-        id: analyzeDiagnosticLogs
-        if: (success() || failure())
-        uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
-        with:
-          shell: ${{ inputs.shell }}
-          project: ${{ inputs.project }}
+      # - name: Analyze Diagnostic Logs
+      #   id: analyzeDiagnosticLogs
+      #   if: (success() || failure())
+      #   uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
+      #   with:
+      #     shell: ${{ inputs.shell }}
+      #     project: ${{ inputs.project }}
 
-      - name: Upload SARIF file to GitHub
-        uses: github/codeql-action/upload-sarif@v3
-        if: always() && hashFiles('output.sarif.json') != ''
-        with:
-          sarif_file: output.sarif.json
-          category: "AL Code Analysis - ${{ inputs.project }}"
-          ref: ${{ github.event.pull_request.number && format('refs/heads/{0}', github.event.pull_request.head.ref) || format('refs/heads/{0}', github.ref_name) }}
-          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+      # - name: Upload SARIF file to GitHub
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   if: always() && hashFiles('output.sarif.json') != ''
+      #   with:
+      #     sarif_file: output.sarif.json
+      #     category: "AL Code Analysis - ${{ inputs.project }}"
+      #     ref: ${{ github.event.pull_request.number && format('refs/heads/{0}', github.event.pull_request.head.ref) || format('refs/heads/{0}', github.ref_name) }}
+      #     sha: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
