--- a/.github/workflows/PullRequestHandler.yaml
+++ b/.github/workflows/PullRequestHandler.yaml
@@ -112,7 +112,7 @@ jobs:
     needs: [ Initialization, Build ]
     if: (!cancelled())
     runs-on: [ windows-latest ]
-    name: Pull Request Status Check
+    name: Code Analysis Processing
     steps:
       - name: Download artifacts - ErrorLogs
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
@@ -127,13 +127,12 @@ jobs:
         uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
         with:
           shell: ${{ inputs.shell }}
-          project: ${{ inputs.project }}
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
         if: always() && hashFiles('output.sarif.json') != ''
         with:
-          sarif_file: output.sarif.json
+          sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
           category: "AL Code Analysis"
           ref: ${{ github.event.pull_request.number && format('refs/heads/{0}', github.event.pull_request.head.ref) || format('refs/heads/{0}', github.ref_name) }}
           sha: ${{ github.event.pull_request.head.sha || github.sha }}
