[main@13133a5] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - 1e88102

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -198,6 +198,43 @@ jobs:
       useArtifactCache: true
       needsContext:  ${{ toJson(needs) }}
 
+  CodeAnalysisUpload:
+    needs: [ Initialization, Build ]
+    if: (!cancelled())
+    runs-on: [ windows-latest ]
+    name: Code Analysis Processing
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+          
+      - name: Read settings
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
+        with:
+          shell: powershell
+          get: trackCodeCopIssuesInGitHub
+
+      - name: Download artifacts - ErrorLogs
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
+        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
+        with:
+          pattern: '*-ErrorLogs-*'
+          path: '${{ github.workspace }}/ErrorLogs/'
+          merge_multiple: true
+
+      - name: Process AL Code Analysis Logs
+        id: ProcessALCodeAnalysisLogs
+        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
+        uses: spetersenms/AL-Go/Actions/ProcessALCodeAnalysisLogs@ALCodeAnalysis
+        with:
+          shell: ${{ inputs.shell }}
+
+      - name: Upload SARIF file to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        if: always() && env.trackCodeCopIssuesInGitHub == 'True' && hashFiles('${{ github.workspace }}/ErrorLogs/output.sarif.json') != ''
+        with:
+          sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
+          category: "AL Code Analysis"
+
   DeployALDoc:
     needs: [ Initialization, Build ]
     if: (!cancelled()) && (needs.Build.result == 'success' || needs.Build.result == 'skipped') && needs.Initialization.outputs.generateALDocArtifact == 1 && github.ref_name == 'main'
