--- a/.github/workflows/PullRequestHandler.yaml
+++ b/.github/workflows/PullRequestHandler.yaml
@@ -114,23 +114,36 @@ jobs:
     runs-on: [ windows-latest ]
     name: Code Analysis Processing
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          lfs: true
+          ref: ${{ github.event_name == 'pull_request' && github.sha || format('refs/pull/{0}/merge', github.event.pull_request.number) }}
+          
+      - name: Read settings
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
+        with:
+          shell: powershell
+          get: trackCodeCopIssuesInGitHub
+
       - name: Download artifacts - ErrorLogs
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
+        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
         with:
           pattern: '*-ErrorLogs-*'
           path: '${{ github.workspace }}/ErrorLogs/'
           merge_multiple: true
 
-      - name: Analyze Diagnostic Logs
-        id: analyzeDiagnosticLogs
-        if: (success() || failure())
-        uses: spetersenms/AL-Go/Actions/AnalyzeDiagnosticLogs@ALCodeAnalysis
+      - name: Process AL Code Analysis Logs
+        id: ProcessALCodeAnalysisLogs
+        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
+        uses: spetersenms/AL-Go/Actions/ProcessALCodeAnalysisLogs@ALCodeAnalysis
         with:
           shell: ${{ inputs.shell }}
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
-        if: always() && hashFiles('output.sarif.json') != ''
+        if: always() && env.trackCodeCopIssuesInGitHub == 'True' && hashFiles('${{ github.workspace }}/ErrorLogs/output.sarif.json') != ''
         with:
           sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
           category: "AL Code Analysis"
