[main@31cd3cc] Update AL-Go System Files from spetersenms/AL-Go@ALCodeAnalysis - 53fa5d8

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -230,7 +230,7 @@ jobs:
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
-        if: always() && env.trackCodeCopIssuesInGitHub == 'True' && hashFiles('${{ github.workspace }}/ErrorLogs/output.sarif.json') != ''
+        if: always() && env.trackCodeCopIssuesInGitHub == 'True'
         with:
           sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
           category: "AL Code Analysis"
