--- a/.github/workflows/PullRequestHandler.yaml
+++ b/.github/workflows/PullRequestHandler.yaml
@@ -119,7 +119,7 @@ jobs:
         with:
           lfs: true
           ref: ${{ github.event_name == 'pull_request' && github.sha || format('refs/pull/{0}/merge', github.event.pull_request.number) }}
-          
+
       - name: Read settings
         uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
         with:
@@ -143,7 +143,7 @@ jobs:
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
-        if: always() && env.trackCodeCopIssuesInGitHub == 'True' && hashFiles('${{ github.workspace }}/ErrorLogs/output.sarif.json') != ''
+        if: always() && env.trackCodeCopIssuesInGitHub == 'True'
         with:
           sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
           category: "AL Code Analysis"
