--- a/.github/workflows/PullRequestHandler.yaml
+++ b/.github/workflows/PullRequestHandler.yaml
@@ -29,7 +29,7 @@ jobs:
     if: (github.event.pull_request.base.repo.full_name != github.event.pull_request.head.repo.full_name) && (github.event_name != 'pull_request')
     runs-on: windows-latest
     steps:
-      - uses: spetersenms/AL-Go/Actions/VerifyPRChanges@ALCodeAnalysis
+      - uses: spetersenms/AL-Go/Actions/VerifyPRChanges@ALCodeAnalysisTracking
 
   Initialization:
     needs: [ PregateCheck ]
@@ -44,30 +44,37 @@ jobs:
       workflowDepth: ${{ steps.DetermineWorkflowDepth.outputs.WorkflowDepth }}
       artifactsRetentionDays: ${{ steps.DetermineWorkflowDepth.outputs.ArtifactsRetentionDays }}
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
+      trackALAlertsInGithub: ${{ steps.SetALCodeAnalysisVar.outputs.trackALAlertsInGithub }}
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@ALCodeAnalysisTracking
         with:
           shell: powershell
 
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           lfs: true
           ref: ${{ github.event_name == 'pull_request' && github.sha || format('refs/pull/{0}/merge', github.event.pull_request.number) }}
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@ALCodeAnalysisTracking
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysisTracking
         with:
           shell: powershell
-          get: shortLivedArtifactsRetentionDays
+          get: shortLivedArtifactsRetentionDays,trackALAlertsInGithub
+
+      - name: Set AL Code Analysis Var output
+        id: SetALCodeAnalysisVar
+        run: |
+          Write-Host "trackALAlertsInGithub environment variable: '$($env:trackALAlertsInGithub)'"
+          Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "trackALAlertsInGithub=$($env:trackALAlertsInGithub)"
 
       - name: Determine Workflow Depth
         id: DetermineWorkflowDepth
@@ -77,7 +84,7 @@ jobs:
 
       - name: Determine Projects To Build
         id: determineProjectsToBuild
-        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@ALCodeAnalysisTracking
         with:
           shell: powershell
           maxBuildDepth: ${{ env.workflowDepth }}
@@ -110,25 +117,18 @@ jobs:
 
   CodeAnalysisUpload:
     needs: [ Initialization, Build ]
-    if: (!cancelled())
+    if: (!cancelled()) && (needs.Initialization.outputs.trackALAlertsInGithub == 'True')
     runs-on: [ windows-latest ]
     name: Code Analysis Processing
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          lfs: true
-          ref: ${{ github.event_name == 'pull_request' && github.sha || format('refs/pull/{0}/merge', github.event.pull_request.number) }}
-
-      - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
-        with:
-          shell: powershell
-          get: trackCodeCopIssuesInGitHub
+          ref: ${{ format('refs/pull/{0}/head', github.event.pull_request.number) }}
 
       - name: Download artifacts - ErrorLogs
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
-        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
+        if: (success() || failure())
         with:
           pattern: '*-ErrorLogs-*'
           path: '${{ github.workspace }}/ErrorLogs/'
@@ -136,29 +136,29 @@ jobs:
 
       - name: Process AL Code Analysis Logs
         id: ProcessALCodeAnalysisLogs
-        if: (success() || failure()) && env.trackCodeCopIssuesInGitHub == 'True'
-        uses: spetersenms/AL-Go/Actions/ProcessALCodeAnalysisLogs@ALCodeAnalysis
+        if: (success() || failure())
+        uses: spetersenms/AL-Go/Actions/ProcessALCodeAnalysisLogs@ALCodeAnalysisTracking
         with:
-          shell: ${{ inputs.shell }}
+          shell: powershell
 
       - name: Upload SARIF file to GitHub
         uses: github/codeql-action/upload-sarif@v3
-        if: always() && env.trackCodeCopIssuesInGitHub == 'True'
+        if: always()
         with:
           sarif_file: '${{ github.workspace }}/ErrorLogs/output.sarif.json'
-          category: "AL Code Analysis"
-          ref: ${{ github.event.pull_request.number && format('refs/heads/{0}', github.event.pull_request.head.ref) || format('refs/heads/{0}', github.ref_name) }}
-          sha: ${{ github.event.pull_request.head.sha || github.sha }}
+          category: "ALCodeAnalysis"
+          ref: ${{ format('refs/pull/{0}/head', github.event.pull_request.number) }}
+          sha: ${{ github.event.pull_request.head.sha }}
 
   StatusCheck:
-    needs: [ Initialization, Build, CodeAnalysisUpload ]
+    needs: [ Initialization, Build ]
     if: (!cancelled())
     runs-on: [ windows-latest ]
     name: Pull Request Status Check
     steps:
       - name: Pull Request Status Check
         id: PullRequestStatusCheck
-        uses: spetersenms/AL-Go/Actions/PullRequestStatusCheck@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/PullRequestStatusCheck@ALCodeAnalysisTracking
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
@@ -166,7 +166,7 @@ jobs:
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@ALCodeAnalysisTracking
         if: success() || failure()
         env:
           GITHUB_TOKEN: ${{ github.token }}
