--- a/.github/workflows/_BuildALGoProject.yaml
+++ b/.github/workflows/_BuildALGoProject.yaml
@@ -82,7 +82,6 @@ permissions:
   actions: read
   contents: read
   id-token: write
-  security-events: write
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -98,22 +97,22 @@ jobs:
     name: ${{ inputs.projectName }} (${{ inputs.buildMode }})
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ inputs.checkoutRef }}
           lfs: true
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
           buildMode: ${{ inputs.buildMode }}
-          get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,doNotRunBcptTests,doNotRunpageScriptingTests,artifact,generateDependencyArtifact,trustedSigning,useGitSubmodules
+          get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,doNotRunBcptTests,doNotRunpageScriptingTests,artifact,generateDependencyArtifact,trustedSigning,useGitSubmodules,trackALAlertsInGithub
 
       - name: Determine whether to build project
         id: DetermineBuildProject
-        uses: spetersenms/AL-Go/Actions/DetermineBuildProject@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/DetermineBuildProject@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           skippedProjectsJson: ${{ inputs.skippedProjectsJson }}
@@ -123,7 +122,7 @@ jobs:
       - name: Read secrets
         id: ReadSecrets
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True' && github.event_name != 'pull_request'
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -131,7 +130,7 @@ jobs:
 
       - name: Checkout Submodules
         if: env.useGitSubmodules != 'false' && env.useGitSubmodules != ''
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ inputs.checkoutRef }}
           lfs: true
@@ -141,14 +140,14 @@ jobs:
       - name: Determine ArtifactUrl
         id: determineArtifactUrl
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True'
-        uses: spetersenms/AL-Go/Actions/DetermineArtifactUrl@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/DetermineArtifactUrl@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
 
       - name: Cache Business Central Artifacts
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True' && env.useCompilerFolder == 'True' && inputs.useArtifactCache && env.artifactCacheKey
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
           path: ${{ runner.temp }}/.artifactcache
           key: ${{ env.artifactCacheKey }}
@@ -156,7 +155,7 @@ jobs:
       - name: Download Project Dependencies
         id: DownloadProjectDependencies
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True'
-        uses: spetersenms/AL-Go/Actions/DownloadProjectDependencies@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/DownloadProjectDependencies@ALCodeAnalysisTracking
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
         with:
@@ -167,7 +166,7 @@ jobs:
           baselineWorkflowRunId: ${{ inputs.baselineWorkflowRunId }}
 
       - name: Build
-        uses: spetersenms/AL-Go/Actions/RunPipeline@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/RunPipeline@ALCodeAnalysisTracking
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True'
         env:
           Secrets: '${{ steps.ReadSecrets.outputs.Secrets }}'
@@ -186,7 +185,7 @@ jobs:
       - name: Sign
         id: sign
         if: steps.DetermineBuildProject.outputs.BuildIt == 'True' && inputs.signArtifacts && env.doNotSignApps == 'False' && (env.keyVaultCodesignCertificateName != '' || (fromJson(env.trustedSigning).Endpoint != '' && fromJson(env.trustedSigning).Account != '' && fromJson(env.trustedSigning).CertificateProfile != ''))
-        uses: spetersenms/AL-Go/Actions/Sign@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/Sign@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           azureCredentialsJson: '${{ fromJson(steps.ReadSecrets.outputs.Secrets).AZURE_CREDENTIALS }}'
@@ -194,7 +193,7 @@ jobs:
 
       - name: Calculate Artifact names
         id: calculateArtifactsNames
-        uses: spetersenms/AL-Go/Actions/CalculateArtifactNames@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/CalculateArtifactNames@ALCodeAnalysisTracking
         if: success() || failure()
         with:
           shell: ${{ inputs.shell }}
@@ -279,7 +278,7 @@ jobs:
 
       - name: Publish artifacts - ErrorLogs
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        if: inputs.artifactsRetentionDays >= 0 && (hashFiles(format('{0}/.buildartifacts/ErrorLogs/*',inputs.project)) != '')
+        if: inputs.artifactsRetentionDays >= 0 && (hashFiles(format('{0}/.buildartifacts/ErrorLogs/*',inputs.project)) != '') && env.trackALAlertsInGithub == 'True'
         with:
           name: ${{ steps.calculateArtifactsNames.outputs.ErrorLogsArtifactsName }}
           path: '${{ inputs.project }}/.buildartifacts/ErrorLogs/'
@@ -289,7 +288,7 @@ jobs:
       - name: Analyze Test Results
         id: analyzeTestResults
         if: (success() || failure()) && env.doNotRunTests == 'False'
-        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
@@ -298,7 +297,7 @@ jobs:
       - name: Analyze BCPT Test Results
         id: analyzeTestResultsBCPT
         if: (success() || failure()) && env.doNotRunBcptTests == 'False'
-        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
@@ -307,7 +306,7 @@ jobs:
       - name: Analyze Page Scripting Test Results
         id: analyzeTestResultsPageScripting
         if: (success() || failure()) && env.doNotRunpageScriptingTests == 'False'
-        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/AnalyzeTests@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
@@ -315,7 +314,7 @@ jobs:
 
       - name: Cleanup
         if: always() && steps.DetermineBuildProject.outputs.BuildIt == 'True'
-        uses: spetersenms/AL-Go/Actions/PipelineCleanup@ALCodeAnalysis
+        uses: spetersenms/AL-Go/Actions/PipelineCleanup@ALCodeAnalysisTracking
         with:
           shell: ${{ inputs.shell }}
           project: ${{ inputs.project }}
