Add trackALAlertsInGithub setting to settings.json

--- a/Project1/.AL-Go/settings.json
+++ b/Project1/.AL-Go/settings.json
@@ -13,5 +13,6 @@
     "Recordings/Scenario1",
     "Recordings/Scenario2"
   ],
-  "artifact": "//*//latest"
+  "artifact": "//*//latest",
+  "trackALAlertsInGithub": false
 }
