Add useProjectDependencies to AL-Go-Settings

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -12,5 +12,6 @@
   "enableCodeCop": true,
   "enableUICop": true,
   "rulesetFile": "../rulesets/ruleset.json",
-  "trackCodeCopIssuesInGitHub": true
+  "trackCodeCopIssuesInGitHub": true,
+  "useProjectDependencies": true
 }
