--- a/.github/workflows/NextMajor.yaml
+++ b/.github/workflows/NextMajor.yaml
@@ -13,7 +13,7 @@ defaults:
     shell: powershell
 
 env:
-  workflowDepth: 1
+  workflowDepth: 2
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
   ALGoRepoSettings: ${{ vars.ALGoRepoSettings }}
 
@@ -30,7 +30,7 @@ jobs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@v7.3
         with:
           shell: powershell
 
@@ -41,13 +41,13 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/WorkflowInitialize@v7.3
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/ReadSettings@v7.3
         with:
           shell: powershell
           get: useGitSubmodules,shortLivedArtifactsRetentionDays
@@ -55,7 +55,7 @@ jobs:
       - name: Read submodules token
         id: ReadSubmodulesToken
         if: env.useGitSubmodules != 'false' && env.useGitSubmodules != ''
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/ReadSecrets@v7.3
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -77,12 +77,12 @@ jobs:
 
       - name: Determine Projects To Build
         id: determineProjectsToBuild
-        uses: spetersenms/AL-Go/Actions/DetermineProjectsToBuild@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/DetermineProjectsToBuild@v7.3
         with:
           shell: powershell
           maxBuildDepth: ${{ env.workflowDepth }}
 
-  Build:
+  Build1:
     needs: [ Initialization ]
     if: (!failure()) && (!cancelled()) && fromJson(needs.Initialization.outputs.buildOrderJson)[0].projectsCount > 0
     strategy:
@@ -104,8 +104,30 @@ jobs:
       artifactsNameSuffix: 'NextMajor'
       needsContext:  ${{ toJson(needs) }}
 
+  Build:
+    needs: [ Initialization, Build1 ]
+    if: (!failure()) && (!cancelled()) && (needs.Build1.result == 'success' || needs.Build1.result == 'skipped') && fromJson(needs.Initialization.outputs.buildOrderJson)[1].projectsCount > 0
+    strategy:
+      matrix:
+        include: ${{ fromJson(needs.Initialization.outputs.buildOrderJson)[1].buildDimensions }}
+      fail-fast: false
+    name: Build ${{ matrix.projectName }} (${{ matrix.buildMode }})
+    uses: ./.github/workflows/_BuildALGoProject.yaml
+    secrets: inherit
+    with:
+      shell: ${{ matrix.githubRunnerShell }}
+      runsOn: ${{ matrix.githubRunner }}
+      project: ${{ matrix.project }}
+      projectName: ${{ matrix.projectName }}
+      buildMode: ${{ matrix.buildMode }}
+      projectDependenciesJson: ${{ needs.Initialization.outputs.projectDependenciesJson }}
+      secrets: 'licenseFileUrl,codeSignCertificateUrl,*codeSignCertificatePassword,keyVaultCertificateUrl,*keyVaultCertificatePassword,keyVaultClientId,gitHubPackagesContext,applicationInsightsConnectionString'
+      artifactsRetentionDays: ${{ fromJson(needs.Initialization.outputs.artifactsRetentionDays) }}
+      artifactsNameSuffix: 'NextMajor'
+      needsContext:  ${{ toJson(needs) }}
+
   PostProcess:
-    needs: [ Initialization, Build ]
+    needs: [ Initialization, Build1, Build ]
     if: always()
     runs-on: [ windows-latest ]
     steps:
@@ -114,7 +136,7 @@ jobs:
 
       - name: Finalize the workflow
         id: PostProcess
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@ALCodeAnalysisTracking
+        uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v7.3
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
