--- a/Project1/.AL-Go/settings.json
+++ b/Project1/.AL-Go/settings.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://raw.githubusercontent.com/spetersenms/AL-Go/ALCodeAnalysisTracking/Actions/.Modules/settings.schema.json",
+  "$schema": "https://raw.githubusercontent.com/microsoft/AL-Go-Actions/v7.3/.Modules/settings.schema.json",
   "country": "us",
   "appFolders": [
     "./app1"
