Update AL-Go-Settings.json with new configurations
Added buildModes and generateDependencyArtifact settings.

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -14,6 +14,8 @@
   "rulesetFile": "../rulesets/ruleset.json",
   "trackCodeCopIssuesInGitHub": true,
   "useProjectDependencies": true,
+  "buildModes": ["Clean"],
+  "generateDependencyArtifact" true,
   "appDependencyProbingPaths": [
     {
       "repo": "https://github.com/spetersenmsorg/Al-Go_MultiProjectTest",
